--- a/site.css
+++ b/site.css
@@ -50,9 +50,11 @@ html, body { margin:0; padding:0; height:100%; "Arial", sans-serif; }
 	padding: 61px 10% 180px;
 }
 #content .module { margin:20px 20px 2em 20px; }
+
+/* Modules */
+.module > a { padding-top: 41px; margin-top: -41px; }
 .module h3 {
-	padding-top: 41px; margin-top: -41px;
-	cursor:pointer; font-size:24px !important; border-bottom:1px solid #000;
+	cursor:pointer; font-size:24px !important; border-bottom:1px solid #000; margin:0px;
 }
 .module h3 i { color:#000; }
 .module > div { padding:0px 20px; }
