--- a/bootstrap.css
+++ b/bootstrap.css
@@ -24,17 +24,18 @@ ol > span, ol > span > span { display:inline-block; }
 #psdle_carousel { width:800px; }
 
 .btn-primary { background-color:#2185f4; }
+/*.btn, .navbar { background-image: linear-gradient(to bottom, #2185f4 0%, #265A88 100%); }*/
 
 /* Footer */
 #footer { 
-	background-color:#2185f4;
-	padding: 10px 0px;
-	text-align: center;
-	margin-top: 10px;
-	position: absolute;
-	bottom: 0px;
-	width: 100%;
-	max-height: 300px;
+    background-color:#2185f4;
+    padding: 10px 0px;
+    text-align: center;
+    margin-top: 10px;
+    position: absolute;
+    bottom: 0px;
+    width: 100%;
+    max-height: 300px;
 }
 #footer span { display:inline-block; text-align:left; vertical-align:text-top; }
 #footer span:first-of-type { margin-right:50px; }
