--- a/bootstrap.css
+++ b/bootstrap.css
@@ -1,3 +1,10 @@
+a.anchor[id^=paq] {
+    display: block;
+    position: relative;
+    top: -60px;
+    visibility: hidden;
+}
+
 .method_info {
     display:block;
     padding:7px;
