--- a/bootstrap.css
+++ b/bootstrap.css
@@ -22,6 +22,11 @@ body { padding-top:70px; padding-bottom:300px; min-height: 100%; position: relat
   padding-bottom:200px; /* this needs to be bigger than footer height*/
 }
 
+.firefox-ext {
+    max-width: 100%;
+    height: 58px;
+}
+
 .footer {
   position: relative;
   margin-top: -300px; /* negative value of footer height */
@@ -71,7 +76,7 @@ i.fa.fancy { position:absolute;left:-5%;top:-40%;color:rgba(255,255,255,0.3); }
 
 .navbar-default { background-color: #2185f4; /* border-color: #0000ee; */ }
  
- .navbar-default .navbar-brand { color: #ffffff; }
+.navbar-default .navbar-brand { color: #ffffff; }
 .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus { color: #ffffff; }
 .navbar-default .navbar-text { color: #ffffff; }
 .navbar-default .navbar-nav > li > a { color: #ffffff; }
