--- a/_src/css/psdle.css
+++ b/_src/css/psdle.css
@@ -83,7 +83,7 @@
     background-color: rgba(255, 255, 255, .8);
     z-index: 9001
 }
-.psdlePlusToggle {
+.search.input.plus {
     cursor: pointer !important;
 }
 
