PSDLE - Use original Valkyrie
Good speedups and reduced overhead.
Also temporary workaround for huge lists that the store can't fit into local storage (and gives up).

--- a/_src/css/psdle.css
+++ b/_src/css/psdle.css
@@ -166,7 +166,7 @@ td:first-child {
     width: 100%
 }
 .negate_regex {
-    background-color: #FF8080;
+    background-color: #FF8080 !important;
     color: #fff
 }
 .psdle_fancy_bar>span,
