PSDLE - Export, CSS and totals fix
Export output now spawns using one less element.
Size total now hidden when the total size is not greater than 0 (no items or all items N/A).

--- a/_src/css/psdle.css
+++ b/_src/css/psdle.css
@@ -92,6 +92,12 @@
 .search.input.plus {
     cursor: pointer !important;
 }
+.search.export {
+    display: inline;
+    width: 95%;
+    max-width: 600px;
+}
+
 
 /*Table          */
 
@@ -245,7 +251,7 @@ span[id^=system_] {
 }
 #dlQAN {
     /*cursor: move;*/
-    
+
     background-color: rgba(33, 133, 244, .8);
     padding: 7px 15px;
     color: #fff;
