PSDLE - Allow export config import/export
Someone's going to complain (ha!) but it makes exporting the config simpler.

I'm not a fan of the array usage either, and I'm too lazy to simulate named constants.

--- a/_src/css/psdle.css
+++ b/_src/css/psdle.css
@@ -185,7 +185,8 @@ td:first-child {
 span#export_view,
 span[id^=dl_],
 span[id^=filter_],
-span[id^=system_] {
+span[id^=system_],
+.psdle_fancy_but {
     font-weight: 700;
     font-size: 0.9em;
     color: #fff;
