PSDLE - Center export headers
Weren't they centered before?

--- a/_src/css/psdle.css
+++ b/_src/css/psdle.css
@@ -371,6 +371,9 @@ span[id^=system_],
 #export_table {
     width: 100%
 }
+#export_table th {
+    text-align: center
+}
 #export_table .orderUp {
     cursor: pointer;
     height:1em;
