PSDLE - Scrolling improvements?
Remove some relatives from CSS.

Minor smartScroll()  improvements:
 - Selects every `padding`th item
 - Now uses element data instead of classes.
 - Removed timeouts

May or may not help Chrome. As bad as this code is, it sure doesn't help the tab becomes basically worthless once it loses focus and regains it.
Testing was done with a list size of ~10k items.

--- a/_src/css/psdle.css
+++ b/_src/css/psdle.css
@@ -213,11 +213,11 @@ td:nth-child(n+3):nth-child(-n+7),
 th:nth-child(n+3):nth-child(-n+7) {
     text-align: center;
     padding: 0 5px !important;
-    position: relative
+    /*position: relative*/
 }
 td:first-child {
     text-align: center;
-    position: relative
+    /*position: relative*/
 }
 /*Search buttons */
 
