Some more Chrome changes.
The culprit ended up being the document scroll event.
More so vendor code really getting around and I'm not about to find out what it's doing. Seems fine when bound specifically to the container, but now I have to figure out accessible scrolling or an alternative way to trigger smartScroll.

--- a/_src/css/psdle.css
+++ b/_src/css/psdle.css
@@ -48,10 +48,12 @@ div.amopromo > div {
 }
 #muh_games_container {
     display: none;
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     left: 0;
+    bottom: 0;
+    overflow: auto;
     color: #000;
     z-index: 9001;
     text-align: center
